# approvalui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  approvalui.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  advanced.md  architecture.md  index.md  troubleshooting.md
docs/examples/: claude.md  codex.md  kimi.md
example/: README.md  approval.html  fixes.json
src/approvalui/: __init__.py  __main__.py  _core.py  cli.py
tests/: test_approvalui.py  test_generate_approval.py
