[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "approvalui"
version = "0.1.0"
description = "Generate a clickable HTML approval page for reviewing UI fixes inside terminal-based AI agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Federico de Ponte" },
]
keywords = ["ai", "agent", "ui", "approval", "claude", "codex", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
approvalui = "approvalui:main"

[project.urls]
Homepage = "https://github.com/floomhq/approvalui"
Repository = "https://github.com/floomhq/approvalui"
Issues = "https://github.com/floomhq/approvalui/issues"
Changelog = "https://github.com/floomhq/approvalui/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["approvalui.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
