[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "approvalui"
version = "0.1.1"
description = "Generate a clickable HTML approval page for reviewing UI fixes inside terminal-based AI agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Federico de Ponte" },
]
keywords = ["ai", "agent", "ui", "approval", "claude", "codex", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
approvalui = "approvalui.cli:main"

[project.urls]
Homepage = "https://github.com/floomhq/approvalui"
Repository = "https://github.com/floomhq/approvalui"
Issues = "https://github.com/floomhq/approvalui/issues"
Changelog = "https://github.com/floomhq/approvalui/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/approvalui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "UP",
]
per-file-ignores = { "src/approvalui/_core.py" = ["E501"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
